--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,29 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <section class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="img/logo.png" alt="logo">
+                </a>
+                <div class="header__links">
+                    <a href="#" class="header__link">Våra produkter</a>
+                    <a href="#" class="header__link">CFO</a>
+                    <a href="#" class="header__link">BOKA DEMO</a>
+                </div>
+            </header>
 
-    
+            <div class="promo__info">
+                
+                <h1 class="promo__title">Framgångsrik tillväxt kräver unika insikter</h1>
+                <h2 class="promo__subtitle">OM hela din verksamhet</h2>
+                <button class="button">Prova fritt i 14 dagar</button>
+            </div>
+
+        </div>
+    </section>
+
 
     <script src="js/script.js"></script>
 </body>
