--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,49 @@
         </div>
     </section>
 
+    <section class="about">
+        
+        <div class="container">
+            <div class="about__img">
+                <img src="icons/x-icon.png" alt="x-picture">
+            </div>
+            <div class="about__wrapper">
+                <p class="about__descr">
+                    Vi tar din finansiella planering och analys till nästa nivå med ett lättanvänt verktyg i Power BI/Excel
+
+                </p>
+                <button class="button button_left">boka demo</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__title">Våra produkter för FP&A</div>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="img/advantages/1ico.jpg" alt="analytics" class="advantages__img">
+                    <div class="advantages__item-title">X-open Analytics</div>
+                    <div class="advantages__descr">BI plug & play för datadrivna insikter och avancerad analys i Power BI.</div>
+                </div>
+
+                <div class="advantages__item">
+                    <img src="img/advantages/2ico.jpg" alt="analytics" class="advantages__img">
+                    <div class="advantages__item-title">X-open Forecast</div>
+                    <div class="advantages__descr">Lättanvänd och effektiv budgetering, prognos och senario.</div>
+                </div>
+
+                <div class="advantages__item">
+                    <img src="img/advantages/3ico.jpg" alt="analytics" class="advantages__img">
+                    <div class="advantages__item-title">X-open Report</div>
+                    <div class="advantages__descr">Skräddarsydd rapportering med automatiserade processer.</div>
+                </div>
+                
+            </div>
+            <button class="button button_advantage "> Mer om våra produkter</button>
+        </div>
+    </section>
+
 
     <script src="js/script.js"></script>
 </body>
