--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,11 @@
                     <a href="#about" class="header__link">BOKA DEMO</a>
                 </div>
 
-                
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </header>
 
             <div class="promo__info">
